<resources>
    <string name="app_name">HiddenBoss</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="my_tournaments">My Tournaments</string>
    <string name="following">Following</string>
    <string name="followed_by">Followed by</string>
    <string name="tournament_title">Tournament title</string>
    <string name="comment">Comment</string>
    <string name="example_date">May 4 13:00-15:00</string>
    <string name="example_location">Åkerövägen 11, Värmdö</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tournament_description">Tournament description</string>
    <string name="tournament_location">Tournament location</string>
    <string name="create">Create</string>
    <string name="choose_game">Choose game</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="refresh">refresh</string>
    <string name="hidden_boss">Hidden Boss</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="missing_date">Missing date</string>
    <string name="missing_address">Missing address</string>
    <string name="check_token">Token</string>
    <string name="register">Register</string>
    <string name="game_info">Game info</string>
    <string name="comment_placeholder">Write a comment...</string>
    <string name="add_comment">POST</string>
    <string name="comment_user">User</string>
    <string name="comment_message">Failed to load message</string>
    <string name="liked_tournaments">Liked Tournaments</string>
    <string name="update">Update</string>
    <string name="game__title">Title:</string>
    <string name="game_release">Release date:</string>
    <string name="game_publisher">Publisher:</string>
    <string name="game_platforms">Platforms:</string>
    <string name="game_no_info">No info on game</string>
    <string name="delete">DELETE</string>
    <string name="register_prompt">No account? Click here to register</string>
    <string name="register_header">Register</string>
    <string name="registered_tournaments">Registered Tournaments</string>
    <string name="deregister">Deregister</string>
    <string name="enter_location">Enter Location</string>
    <string name="create_account">Create an account</string>
</resources>
