<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hiddenboss.CreateActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/editGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:hint="@string/choose_game"
        android:completionThreshold="1"
        android:completionHint="@string/choose_game"
        app:errorEnabled="true"
        android:inputType="text">

    </androidx.appcompat.widget.AppCompatAutoCompleteTextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editGame"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_title"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_description"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editDescription"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_location"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/editStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLocation"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/editStartTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        app:layout_constraintStart_toEndOf="@+id/editStartDate"
        app:layout_constraintTop_toBottomOf="@+id/editLocation"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/editEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStartDate"
        app:layout_constraintWidth_percent="0.4" />

    <TextView

        android:id="@+id/editEndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/editEndDate"
        app:layout_constraintTop_toBottomOf="@+id/editStartTime"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/updateTournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
